VERSION 2.3.2:

  License changed to MIT
	
  Bug in non-vanilla AtomicCount implementations corrected. 
	(Caused hanging	in some cases and general trouble with CountedPtr)

VERSION 2.3.1:

  Bug with PoolExecutor/ConcurrentExecutor not automatically canceling
  themselves properly.
	
VERSION 2.3.0:

  I've been working on some updates after working with Bruce Eckle and
  Chuck Allison; who've provided quite a bit of valuable feedback

  <changes to be enumerted shortly>
	

VERSION 2.2.11:

  Adjusted some of the include files that were missing #include's
  that were left out (Barrier.h, ZThread.h, posix/FastMutex.h)

  Fixed some of the Time class's math.

  FairReadWriteLock should properly release waiters.

  DeferredCancelationScope defers cancelation correctly now
  as it should.

  Started updating the autoconf files, detects asm/atomic.h
  and bits/atomicity.h correctly now.
	
VERSION 2.2.10:

  Rolled up most of the small changes that were available in CVS.
  BlockingQueue was out of date; there was some deadlock potential
  in the Monitor classes that was removed, the AtomicCount needed 
  the dll export decoration, and a few other miscellaneous updates.
	
VERSION 2.2.9:

  Updated ThreadQueue which mistakenly was not removing joined daemon
  threads.

  Updated Win32 SwitchToThread code.
 	 
VERSION 2.2.8:

  Added MacOS support. This has been tested with MacOS X only
	
  Updated BoundedQueue.h
  Updated the vannila primatives

	
VERSION 2.2.7:

  Apply user submitted patch to remove non-nothrow exception specifications. The
  patch can be found (and reversed if desired) in the contrib/ directory
	
  included <assert.h> in Singleton

  Enabled CVS

  Updated read-write lock interface.
    - Dropped RWLock, moved to ReadWriteLock
    - Adjusted implementation of the two concrete subclasses.
	
VERSION 2.2.6:

  Type in FastLock.h fixed.
	
VERSION 2.2.5:

  Added an AtomicCount class that will use as lightwieght a locking mechanism