@@ -17,7 +17,7 @@ dnl AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABI
 dnl WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 dnl CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
-AC_REVISION($Revision: 1.13 $ZT_VERSION $)
+AC_REVISION($Revision: 1.14 $ZT_VERSION $)
 
 AC_INIT
 AC_CONFIG_SRCDIR([README])
@@ -183,10 +183,6 @@ AC_ARG_ENABLE(macos,
 AC_ARG_ENABLE(vanilla,
 [  --enable-vanilla        Select vanilla implementation [default=autodetect]],
 [
-  if test $ZT_TYPE != auto; then
-     AC_MSG_ERROR(Select one implementation)
-  fi
-  ZT_TYPE="vanilla"
   COMPILER_OPTIONS="$COMPILER_OPTIONS -DZT_VANILLA"
 ])
 
