@@ -5,6 +5,9 @@ VERSION 2.3.2:
   Bug in non-vanilla AtomicCount implementations corrected. 
 	(Caused hanging	in some cases and general trouble with CountedPtr)
 
+  Added configuration option to prefer vanilla implementation where
+	possible.
+
 VERSION 2.3.1:
 
   Bug with PoolExecutor/ConcurrentExecutor not automatically canceling
